# resume-ai-generator

./: .gitignore  Resume generator.drawio  pyproject.toml  readme.md  settings.py
client_api/: git.py
