[tool.poetry]
name = "resume-ai-generator"
version = "0.1.0"
description = ""
authors = ["evgesha1999 <evgesha.22013@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
httpx = "^0.28.1"
pydantic = "^2.13.3"
pydantic-core = "^2.46.3"
pydantic-settings = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
